--- a/build-tools/build.xml
+++ b/build-tools/build.xml
@@ -2,15 +2,14 @@
 <project name="iml-zfComponents" default="usage" basedir=".">
     <property name="project.name" value="iml-zfComponents" />
     <property name="project.title" value="IML Zend Framework Components" />
-    <property name="project.revision" value="1" />
+    <property name="project.revision" value="1" override="true" />
     <property name="dir.base" value="${project.basedir}/.." />
     <property name="dir.build" value="${dir.base}/build" />
     <property name="dir.build-tools" value="${dir.base}/build-tools" />
     <property name="dir.build-stylesheets" value="${dir.build-tools}/xsl" />
     <property name="dir.logs" value="${dir.build}/logs" />
-    <property name="dir.reports" value="${dir.build}/reports" />
-    <property name="dir.web" value="${dir.build}/web" />
-    <property name="dir.apidoc" value="${dir.web}/apidoc" />
+    <property name="dir.reports" value="/Users/mrolli/Sites/projects/iml-zfc/reports" />
+    <property name="dir.apidoc" value="${dir.reports}/apidoc" />
     <taskdef classname="PhpCodeSnifferExternalTask" name="phpcodesniffer" classpath="${dir.build-tools}/phing/tasks" />
     <taskdef classname="PhpCodeSnifferReportTask" name="phpcodesnifferreport" classpath="${dir.build-tools}/phing/tasks" />
 
@@ -42,12 +41,11 @@
         <mkdir dir="${dir.build}" />
         <mkdir dir="${dir.logs}" />
         <mkdir dir="${dir.reports}" />
-        <mkdir dir="${dir.web}" />
     </target>
 
     <target name="test">
         <mkdir dir="${dir.logs}" />
-        <mkdir dir="${dir.web}" />
+        <mkdir dir="${dir.reports}" />
         <phpunit2>
             <formatter todir="${dir.logs}" type="xml" outfile="phpunit_testresults.xml" />
             <batchtest>
@@ -59,21 +57,20 @@
                 </fileset>
             </batchtest>
         </phpunit2>
-        <phpunit2report format="noframes" styledir="${dir.build-stylesheets}" infile="${dir.logs}/phpunit_testresults.xml" todir="${dir.web}" />
+        <phpunit2report format="noframes" styledir="${dir.build-stylesheets}" infile="${dir.logs}/phpunit_testresults.xml" todir="${dir.reports}" />
     </target>
 
     <target name="codesniff" description="Does the code sniffing on project.">
         <mkdir dir="${dir.logs}" />
         <mkdir dir="${dir.reports}" />
-        <mkdir dir="${dir.web}" />
         <phpcodesniffer report="checkstyle" standard="Zend" todir="${dir.logs}" outfile="phpcs_testresults.xml">
             <fileset dir="${dir.base}">
                 <include name="library/Iml/**/*.php" />
                 <include name="tests/**/*Test.php" />
             </fileset>
         </phpcodesniffer>
-        <phpcodesnifferreport format="brief" styledir="${dir.build-stylesheets}" infile="${dir.logs}/phpcs_testresults.xml" todir="${dir.web}" />
-        <phpcodesnifferreport format="details" styledir="${dir.build-stylesheets}" infile="${dir.logs}/phpcs_testresults.xml" todir="${dir.web}" />
+        <phpcodesnifferreport format="brief" styledir="${dir.build-stylesheets}" infile="${dir.logs}/phpcs_testresults.xml" todir="${dir.reports}" />
+        <phpcodesnifferreport format="details" styledir="${dir.build-stylesheets}" infile="${dir.logs}/phpcs_testresults.xml" todir="${dir.reports}" />
     </target>
 
     <target name="apidoc.build">
@@ -107,6 +104,7 @@
         svnpath="svn"
         workingcopy="${dir.base}"
         propertyname="current.revision" />
+        <property name="${project.revision}" value="${current.revision}" override="true" />
     </target>
 
     <target name="svn.update">
@@ -137,7 +135,6 @@
         <echo message="dir.base:${dir.base}" />
         <echo message="dir.logs:${dir.logs}" />
         <echo message="dir.reports:${dir.reports}" />
-        <echo message="dir.web:${dir.web}" />
         <echo message="$dir.apidoc:${dir.apidoc}" />
     </target>
 
