improvements to the build system

--- a/build-tools/build.properties
+++ b/build-tools/build.properties
@@ -6,4 +6,4 @@ project.title=IML Zend Framework Components
 
 # where to store html output; subdir appended
 # automatically for grouping results (apidoc|reports)
-dir.output=temp/
+dir.output=/srv/svn/html/projects/${project.name}
