--- a/build-tools/build.properties
+++ b/build-tools/build.properties
@@ -1,9 +1,18 @@
-# title of the subversion project
-project.name=iml-zfComponents
+# Repository Name
+project.repository=iml-zfComponents
 
-# human readable title
+# Project Title
 project.title=IML Zend Framework Components
+
+# Should phing do unit tests? Default enabled.
+#project.test.disabled = true
+
+# Should phing do code sniffing? Default enabled.
+#project.codesniff.disabled = true
+
+# Should phing do apidoc generation? Default enabled.
+#project.phpdoc.disabled = true
 
 # where to store html output; subdir appended
 # automatically for grouping results (apidoc|reports)
-dir.output=/srv/svn/html/projects/${project.name}
+dir.output=/srv/svn/html/projects/${project.repository}
