--- a/build-tools/build.properties
+++ b/build-tools/build.properties
@@ -11,7 +11,7 @@ project.title=IML Zend Framework Components
 #project.codesniff.disabled = true
 
 # Should phing do apidoc generation? Default enabled.
-#project.phpdoc.disabled = true
+#project.apidoc.disabled = true
 
 # where to store html output; subdir appended
 # automatically for grouping results (apidoc|reports)
