--- a/build-tools/build.properties
+++ b/build-tools/build.properties
@@ -15,4 +15,4 @@ project.title=IML Zend Framework Components
 
 # where to store html output; subdir appended
 # automatically for grouping results (apidoc|reports)
-dir.output=/srv/svn/html/projects/${project.repository}
+dir.output=/var/xinc/projects/${project.repository}/builds
