--- a/build-tools/build.xml
+++ b/build-tools/build.xml
@@ -13,8 +13,7 @@
   <exec dir="${basedir}/tests"
    executable="phpunit"
    failonerror="true">
-   <arg line=" 
-        --log-junit '${basedir}/data/build/logs/junit.xml'
+   <arg line="--log-junit '${basedir}/data/build/logs/junit.xml'
         --coverage-clover '${basedir}/data/build/logs/clover.xml'
         --coverage-html '${basedir}/data/build/codeCoverage/'
         "/>
